prepares Schildergenerator tex path

--- a/kiffel/templates/kiffel/nametags.tex
+++ b/kiffel/templates/kiffel/nametags.tex
@@ -2,7 +2,7 @@
 % Script zur Erstellung der Namensschilder für die KIF
 
 \documentclass{article}
-\usepackage{kifschilder}
+\usepackage{namensschilder}
 
 \begin{document}
 
