adds frontend page for generating signs

--- a/kiffel/templates/kiffel/schilder.tex
+++ b/kiffel/templates/kiffel/schilder.tex
@@ -1,10 +1,9 @@
 \documentclass{article}
-\usepackage{schilder}
 
 \begin{document}
 
-\Schild{
-  {{text}}
+\textbf{
+  {{kiffels.text}}
 }
 
 \end{document}
