Bilder und Templates geordnet

--- a/kiffel/templates/schilder/headline-top_arrowdown_text-right.tex
+++ b/kiffel/templates/schilder/headline-top_arrowdown_text-right.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 
-\input{support/header}
+\input{schilder_style}
 
 \begin{document}
 
@@ -11,7 +11,7 @@
 \begin{columns}
 \column{.45\textwidth}
 	\centering
-	\arrowdownleft
+	\arrowdown
 \column{.55\textwidth}
 	\Large{${ form.text }}
 \end{columns}
