--- a/kiffel/templates/schilder/headline-top_arrowleft_image-right.tex
+++ b/kiffel/templates/schilder/headline-top_arrowleft_image-right.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 
-\input{support/header}
+\input{schilder_style}
 
 \begin{document}
 
@@ -11,9 +11,9 @@
 \begin{columns}
 \column{.45\textwidth}
 	\centering
-	\arrowupthenleft
+	\arrowleft
 \column{.55\textwidth}
-	\includegraphics[width=\linewidth]{${ form.img }}
+	\IfFileExists{ ${form.img} }{\includegraphics[width=\linewidth]{${ form.img }}}{}
 \end{columns}
 \vfill ~
 \end{frame}
