--- a/kiffel/templates/schilder/headline-top_arrowupthenright_image-right.tex
+++ b/kiffel/templates/schilder/headline-top_arrowupthenright_image-right.tex
@@ -1,19 +1,19 @@
 \documentclass{beamer}
 
-\input{support/header}
+\input{schilder_style}
 
 \begin{document}
 
 \begin{frame}
 ~ \vfill
 \defaulthead{${ form.headline }}
-\vskip.5cm ~ \vfill ~
+\vskip.5cm
 \begin{columns}
 \column{.45\textwidth}
 	\centering
 	\arrowupthenright
 \column{.55\textwidth}
-	\Large{${ form.text }}
+	\includegraphics[width=\linewidth]{${ form.img }}
 \end{columns}
 \vfill ~
 \end{frame}
