--- a/kiffel/templates/schilder/headline-top_arrowupthenright_text-right.tex
+++ b/kiffel/templates/schilder/headline-top_arrowupthenright_text-right.tex
@@ -1,17 +1,17 @@
 \documentclass{beamer}
 
-\input{support/header}
+\input{schilder_style}
 
 \begin{document}
 
 \begin{frame}
 ~ \vfill
 \defaulthead{${ form.headline }}
-\vskip.5cm
+\vskip.5cm ~ \vfill ~
 \begin{columns}
 \column{.45\textwidth}
 	\centering
-	\arrowupleft
+	\arrowupthenright
 \column{.55\textwidth}
 	\Large{${ form.text }}
 \end{columns}
