--- a/kiffel/assets/schilder_style.tex
+++ b/kiffel/assets/schilder_style.tex
@@ -21,14 +21,14 @@
 %\usecolortheme{whale}
 %\usecolortheme{wolverine}
 
-\setbeamertemplate{headline}{} 
+\setbeamertemplate{headline}{}
 
-\setbeamertemplate{footline}{\hskip.5cm 
+\setbeamertemplate{footline}{\hskip.5cm
 Edit tex/support/header.tex to create your own design.\hfill
-\includegraphics[width=.15\textwidth]{support/genericlogo}
+\includegraphics[width=.15\textwidth]{bilder/genericlogo}
 \hskip.5cm~
 \vskip.5cm
-} 
+}
 
 \setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
 
@@ -86,4 +86,3 @@ Edit tex/support/header.tex to create your own design.\hfill
   \tikz{\path[x=4mm, y=4mm, fill=black, draw=black, line width=0mm]
     (0,0) -- ++(0,8) to[out=90,in=180] ++(12,12) -- ++(4,0) -- ++(0,8)
     -- ++(14,-14) -- ++(-14,-14) -- ++(0,8) -| (12,0) -- (0,0);}}
-
