--- a/kiffel/templates/schilder/headline-top_arrowupthenleft_image-right.tex
+++ b/kiffel/templates/schilder/headline-top_arrowupthenleft_image-right.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 
-\input{support/header}
+\input{schilder_style}
 
 \begin{document}
 
@@ -11,9 +11,9 @@
 \begin{columns}
 \column{.45\textwidth}
 	\centering
-	\arrowdown
+	\arrowupthenleft
 \column{.55\textwidth}
-	\Large{${ form.text }}
+	\includegraphics[width=\linewidth]{${ form.img }}
 \end{columns}
 \vfill ~
 \end{frame}
