mass refactoring tex templates

--- a/kiffel/templates/schilder/headline-top_arrowupthenright_text-right.tex
+++ b/kiffel/templates/schilder/headline-top_arrowupthenright_text-right.tex
@@ -6,14 +6,14 @@
 
 \begin{frame}
 ~ \vfill
-\defaulthead{${ form.headline }}
+\defaulthead{{{kiffels.headline}}}
 \vskip.5cm ~ \vfill ~
 \begin{columns}
 \column{.45\textwidth}
 	\centering
 	\arrowupthenright
 \column{.55\textwidth}
-	\Large{${ form.text }}
+	\Large{{{kiffels.text}}}
 \end{columns}
 \vfill ~
 \end{frame}
