--- a/kiffel/templates/schilder/headline-top_image-center.tex
+++ b/kiffel/templates/schilder/headline-top_image-center.tex
@@ -6,7 +6,7 @@
 
 \begin{frame}
 ~\vfill
-\defaulthead{${ form.headline }}
+\defaulthead{{{kiffels.headline}}}
 \vskip1.2cm
 \begin{center}
 	\IfFileExists{ ${form.img} }{\includegraphics[height=.87\textheight]{${ form.img }}}{}
