--- a/kiffel/templates/schilder/headline-top_image-left_text-right.tex
+++ b/kiffel/templates/schilder/headline-top_image-left_text-right.tex
@@ -6,13 +6,13 @@
 
 \begin{frame}
 ~\vfill
-\defaulthead{${ form.headline }}
+\defaulthead{{{kiffels.headline}}}
 \vskip0.7cm
 \begin{columns}
 \column{.5\textwidth}
 	\IfFileExists{ ${form.img} }{\includegraphics[width=\linewidth]{${ form.img }}}{}
 \column{.5\textwidth}
-	\huge{${ form.text }}
+	\huge{{{kiffels.text}}}
 \end{columns}
 \vfill ~
 \end{frame}
