--- a/kiffel/templates/schilder/image-left_bothtext-right.tex
+++ b/kiffel/templates/schilder/image-left_bothtext-right.tex
@@ -10,9 +10,9 @@
 \column{.5\textwidth}
 	\IfFileExists{ ${form.img} }{\includegraphics[width=\linewidth]{${ form.img }}}{}
 \column{.5\textwidth}
-	\Huge{${ form.headline }}
+	\Huge{{{kiffels.headline}}}
 	\vskip1cm
-	\Large{${ form.text }}
+	\Large{{{kiffels.text}}}
 \end{columns}
 \vfill ~
 \end{frame}
