changes during kif

--- a/kiffel/assets/scheine.sty
+++ b/kiffel/assets/scheine.sty
@@ -24,6 +24,7 @@
   \begin{letter}{#1#2\\#3}
     \opening{Sehr geehrte Damen und Herren,}
     hiermit bestätigen wir, dass \textbf{#1#2} an der 44,0. Konferenz der Informatikfachschaften (KIF) in Darmstadt teilgenommen hat.\\\\
+    Die Konferenz hat vom 4. bis zum 8. Mai 2016 stattgefunden. Der Teilnahmebeitrag von 25 Euro wurde bezahlt.
     \closing{Mit freundlichen Grüßen}
   \end{letter}
 
