modify letter of attendance generation change from tu darmstadt layout to koma letter change info to kif 46,5

--- a/kiffel/assets/scheine.sty
+++ b/kiffel/assets/scheine.sty
@@ -5,26 +5,24 @@
 \usepackage{tabularx}
 \usepackage{xifthen}
 \usepackage{url}
+\usepackage{graphicx}
 
-\setkomavar{frominstitution}{Fachschaft Informatik}
-\setkomavar{fromname}{KIF-Orga\linebreak c/o FS Informatik }
-\setkomavar{fromaddress}{Hochschulstr. 10\\64289 Darmstadt}
-\setkomavar{fromphone}{06151 16-25522}
-\setkomavar{fromemail}{kif-orga@d120.de}
-\setkomavar{fromlogo}{\includegraphics[clip,width=0.5\linewidth]{KIFLogo-Schrift}}
+\setkomavar{fromname}{KIF 46,5 \linebreak c/o FS Informatik }
+\setkomavar{fromaddress}{Robert-Mayer-Straße 11-15\\60325 Frankfurt am Main}
+\setkomavar{fromemail}{kif@cs.uni-frankfurt.de}
+\setkomavar{fromlogo}{\includegraphics[clip,width=0.2\textwidth]{KIFLogo-Schrift}}
 
-\setkomavar{subject}[]{\textbf{Teilnahmebestätigung an der KIF 44,0 in Darmstadt}}
-\setkomavar{shortfromname}{D120}
-\setkomavar{signature}{\\Orga-Team der 44,0ten KIF}
+\setkomavar{subject}[]{\textbf{Teilnahmebestätigung an der KIF 46,5 in Frankfurt am Main}}
+\setkomavar{signature}{\\Organisations-Team der KIF 46,5}
 
 \setlength{\parindent}{0cm}
 
-\newcommand{\schein}[3]{
+\newcommand{\schein}[2]{
 
-  \begin{letter}{#1#2\\#3}
+  \begin{letter}{#1\\#2}
     \opening{Sehr geehrte Damen und Herren,}
-    hiermit bestätigen wir, dass \textbf{#1#2} an der 44,0. Konferenz der Informatikfachschaften (KIF) in Darmstadt teilgenommen hat.\\\\
-    Die Konferenz hat vom 4. bis zum 8. Mai 2016 stattgefunden. Der Teilnahmebeitrag von 25 Euro wurde bezahlt.
+    hiermit bestätigen wir, dass \textbf{#1} an der Konferenz der Informatikfachschaften (KIF) 46,5 in Frankfurt am Main teilgenommen hat.\\\\
+    Die Konferenz hat vom 31. Oktober bis zum 04. November 2018 stattgefunden. Der Teilnahmebeitrag von 25 Euro wurde bezahlt.
     \closing{Mit freundlichen Grüßen}
   \end{letter}
 
