--- a/kiffel/templates/kiffel/attending-report.tex
+++ b/kiffel/templates/kiffel/attending-report.tex
@@ -1,6 +1,6 @@
 %% Für KIF-Teilnahmebestätigungen muss ein neues Style gebaut werden ;)
 
-\documentclass[accentcolor=tud3b]{tudletter}
+\documentclass[fromlogo=true]{scrlttr2}
 \usepackage{scheine}
 
 \begin{document}
@@ -11,8 +11,6 @@
 
 \schein{
   {{kiffel.vorname}}
-}{
-  {{kiffel.nachname}}
 }{
   {{kiffel.hochschule}}
 }
